...

  MovieTileWidget({key, this.movie, this.favoriteMovies, this.onTap, this.showStar, this.onStar, this.onRemoveStar}): super(key: key);

  Widget _favoriteIcon() {
    bool isFavorite = favoriteMovies.indexWhere((x) => x.imdbId == movie.imdbId) > -1;
    return IconButton(
      key: ValueKey('favorite_icon'),
      icon: Icon(isFavorite ? Icons.favorite : Icons.favorite_border, color: Colors.red.shade600),
      onPressed: () => isFavorite ? onRemoveStar(movie) : onStar(movie),
    );
  }

  Widget _starIcon() {
...
  Widget build(BuildContext context) {
    if (movies == null || movies.length == 0) {
      return Center(child: Text("no result", textAlign: TextAlign.center));
    }

    return ListView.builder(
        key: ValueKey("movie_list"),
        itemCount: movies.length,
        itemBuilder: (context, index) => MovieTileWidget(
            key: ValueKey('movie_tile_$index'),
            movie: movies[index],
            favoriteMovies: favoriteListModel,
            onTap: () => onMovieTap(movies[index]),
...
