...
                            alignment: Alignment.topCenter,
                            margin: EdgeInsets.symmetric(horizontal: 16),
                            child: SingleChildScrollView(
                                child: Column(
                                  crossAxisAlignment: CrossAxisAlignment.start,
                                  children: [
                                    if (!isFinishLoading) Text("Loading..."),
                                    if (isFinishLoading) ...rightSide,
                                  ],
                                )))),
                  ],
                )),
            if (state.canStar) _voteBar(),
...
